<resources>
    <string name="app_name">Refitted</string>
    <string name="action_settings">Settings</string>
    <string name="sub25">-25</string>
    <string name="add25">+25</string>
    <string name="sub45">-45</string>
    <string name="sub10">-10</string>
    <string name="add45">+45</string>
    <string name="sub5">-5</string>
    <string name="sub2point5">-2.5</string>
    <string name="add5">+5</string>
    <string name="add10">+10</string>
    <string name="addOne">+1</string>
    <string name="add2point5">+2.5</string>
    <string name="subOne">-1</string>
    <string name="complete_set">Complete Set</string>
    <string name="start_timed_exercise">Begin Exercise</string>
    <string name="complete_exercise">Exercise Complete!</string>
    <string name="cancel_rest">Start Next Set Early</string>
    <string name="weight_value_hint">lbs</string>
    <string name="reps_value_hint">Reps</string>
    <string name="dynamo_table">refitted.dev01</string>
    <string name="move_right"><![CDATA[>]]></string>
    <string name="move_left"><![CDATA[<]]></string>
    <string name="word_of">of</string>
    <string name="seconds_rest_phrase">%.1fs rest"</string>
    <string name="switch_to_alternate">Switch To Alternate</string>
    <string name="target">Target:</string>
    <string name="target_reps">Target Reps:</string>
    <string name="target_sets">Target Sets:</string>
    <string name="to_failure">To Failure</string>
    <string name="to_failure_note">(To Failure)</string>
    <string name="enable_2_5_lbs">Show 2.5 lb button</string>
    <string name="enable_5_lbs">Show 5 lb button</string>
    <string name="enable_more_lbs">Show 10, 25, and 45 lb buttons</string>
    <string name="enable_double_lbs">Show weights as double (i.e. 2x45)</string>
    <string name="prev_weight">Previous Sets</string>
    <string name="date">Date:</string>
    <string name="reps">Reps:</string>
    <string name="weight">Weight:</string>
    <string name="lbs">lbs</string>
    <string name="alternate">Alternate</string>
    <string name="history">History</string>
    <string name="colon">:</string>
    <string name="day">Day</string>
    <string name="ax1">AX1</string>
    <string name="inferno_size">Inferno Size</string>
    <string name="improvement_prefix">Improvement:</string>
    <string name="improvement_starter">I want this page to…</string>
    <string name="request_a_feature">Request a Feature</string>
    <string name="report_a_bug">Report a Bug</string>
    <string name="configure_weight_buttons">Configure Weight Buttons</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight_label">Weight</string>
    <string name="reps_label">Reps</string>
    <string name="doubled_label">Barbell\nMode?</string>
    <string name="complete_superset_part_1">Complete Superset Part 1 (%1$d of %2$d)</string>
    <string name="complete_set_of_workout">Complete Set %1$d of %2$d</string>
    <string-array name="exercise_reps_range">
        <item>%1$d-%2$d</item>
        <item>%1$d-%2$d (To Failure)</item>
        <item>%1$d-%2$d %3$s</item>
        <item>%1$d-%2$d %3$s (To Failure)</item>
    </string-array>
    <string-array name="exercise_reps">
        <item>%1$d</item>
        <item>%1$d (To Failure)</item>
        <item>%1$d %3$s</item>
        <item>%1$d %3$s (To Failure)</item>
    </string-array>
</resources>
