<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <item
        android:id="@+id/switch_to_alternate_menu_item"
        android:title="@string/switch_to_alternate"
        android:titleCondensed="@string/alternate"
        android:visible="false"
        app:showAsAction="ifRoom"
        tools:visible="true" />

    <item
        android:id="@+id/config_button_layout"
        android:title="Configure Weight Buttons"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/show_history"
        android:title="@string/history"
        android:visible="true"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/report_bug"
        android:title="@string/report_a_bug"
        android:visible="true"
        app:showAsAction="never" />

    <item
        android:id="@+id/feedback"
        android:title="@string/request_a_feature"
        android:visible="true"
        app:showAsAction="never" />
</menu>