<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:layout_height="350dp"
        tools:layout_marginTop="350dp">

        <Button
            android:id="@+id/moveLeftButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/move_left"
            android:visibility="@{viewmodel.hasLeft ?? View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/restTimeView"
            app:layout_constraintEnd_toStartOf="@+id/restTimeView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/restTimeView" />

        <Button
            android:id="@+id/addRepButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/addOne"
            app:layout_constraintBottom_toTopOf="@+id/repsDisplayView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/add_weight_fragment"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/subRepButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subOne"
            app:layout_constraintBottom_toTopOf="@+id/completeSetButton"
            app:layout_constraintStart_toStartOf="@+id/addRepButton"
            app:layout_constraintTop_toBottomOf="@+id/repsDisplayView" />

        <Button
            android:id="@+id/completeSetButton"
            android:layout_width="352dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:enabled="@{viewmodel.completeSetButtonEnabled}"
            android:text="@{completeSetButtonText}"
            app:layout_constraintBottom_toTopOf="@+id/restProgressBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/weight_rep_barrier"
            app:layout_constraintVertical_bias="0.19999999" />

        <Button
            android:id="@+id/moveRightButton"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/move_right"
            android:visibility="@{viewmodel.hasRight ?? View.GONE}"
            app:layout_constraintBottom_toBottomOf="@+id/restTimeView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.458"
            app:layout_constraintStart_toEndOf="@+id/restTimeView"
            app:layout_constraintTop_toTopOf="@+id/restTimeView"
            app:layout_constraintVertical_bias="1.0" />

        <EditText
            android:id="@+id/repsDisplayView"
            android:layout_width="58dp"
            android:layout_height="46dp"
            android:layout_marginStart="16dp"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/reps_value_hint"
            android:importantForAutofill="no"
            android:inputType="number"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:text='@={viewmodel.repsDisplayValue}'
            app:layout_constraintBottom_toTopOf="@+id/subRepButton"
            app:layout_constraintStart_toStartOf="@+id/addRepButton"
            app:layout_constraintTop_toBottomOf="@+id/addRepButton"
            tools:text="12" />

        <EditText
            android:id="@+id/weightDisplayView"
            android:layout_width="58dp"
            android:layout_height="46dp"
            android:ems="10"
            android:gravity="center_horizontal|center_vertical"
            android:hint="@string/weight_value_hint"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:text='@={viewmodel.weightDisplayValue}'
            app:layout_constraintBottom_toBottomOf="@+id/sub_weight_fragment"
            app:layout_constraintEnd_toStartOf="@+id/add_weight_fragment"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/sub_weight_fragment"
            app:layout_constraintTop_toTopOf="@+id/sub_weight_fragment"
            tools:text="25.0" />

        <FrameLayout
            android:id="@+id/sub_weight_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            app:layout_constraintBottom_toTopOf="@+id/completeSetButton"
            app:layout_constraintEnd_toStartOf="@+id/weightDisplayView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_height="56dp"
            tools:layout_width="56dp" />

        <FrameLayout
            android:id="@+id/add_weight_fragment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/completeSetButton"
            app:layout_constraintEnd_toStartOf="@+id/addRepButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/weightDisplayView"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_height="56dp"
            tools:layout_width="56dp" />

        <ProgressBar
            android:id="@+id/restProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="352dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:max="@{viewmodel.restMax ?? 0}"
            android:progress="@{viewmodel.restProgress ?? 0}"
            app:layout_constraintBottom_toTopOf="@+id/restTimeView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/completeSetButton" />

        <TextView
            android:id="@+id/restTimeView"
            android:layout_width="171dp"
            android:layout_height="61dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@{restValueText}"
            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/restProgressBar"
            app:layout_constraintVertical_bias="0.40"
            tools:text="30.0s" />

        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/weight_rep_barrier"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="subRepButton,sub_weight_fragment,add_weight_fragment"
            tools:layout_editor_absoluteY="554dp" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <data>

        <import type="android.view.View" />

        <variable
            name="viewmodel"
            type="com.litus_animae.refitted.models.ExerciseViewModel" />

        <variable
            name="completeSetButtonText"
            type="androidx.lifecycle.LiveData&lt;String&gt;" />

        <variable
            name="restValueText"
            type="androidx.lifecycle.LiveData&lt;String&gt;" />
    </data>
</layout>